Adjust the mid-word-break heuristic limit to 4em for Emoji ZWJ sequence

Mid-word-break algorithm kicks in when CSS properties such as
'word-wrap: break-word' is used. Logically speaking, we should layout
as normal, and break words if overflow occurs.

However, Blink has 2em heuristic limit because of the performance
problem in certain cases. This means Blink measures characters that go
beyond the right edge only up to 2em before it starts mid-word-break.
See the previous CL[1] for more details.

This patch adjusts it to 4em. The longest common ligature is Emoji ZWJ
sequence, and its v5.0[2] can ligate 4 Emoji into 1 at maximum. To
handle this, 3em overflow is needed, and 1em for a rainy day fund.

[1] r403830, https://codereview.chromium.org/2077313002
[2] http://unicode.org/emoji/charts/emoji-zwj-sequences.html

Bug: 746222
Change-Id: Ic58b58716502f4ae9a06c1e91d2f5de944bc7978
Reviewed-on: https://chromium-review.googlesource.com/581249
Reviewed-by: Dominik Röttsches <drott@chromium.org>
Commit-Queue: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#488813}
Former-commit-id: 14ec221a9013017a9007181bb7414464ee63f1b4